--- a/ios/LZKKDemo/Base.lproj/LaunchScreen.xib
+++ b/ios/LZKKDemo/Base.lproj/LaunchScreen.xib
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sx.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="xr4-dE-z6i">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sx.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="xr4-dE-z6i">
                     <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
                 </imageView>
             </subviews>
